--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro";
 import CloudflareImage from "../components/CloudflareImage.astro";
 
 const gravatarHash = "60eb98ab51a815a519feeca028e08573"; // IchimaruGin728
+const cfAvatarId = import.meta.env.PUBLIC_CF_AVATAR_ID;
 
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
 
@@ -110,17 +111,21 @@ try {
               alt="force-load"
             />
             {
-              /* 
-              This currently loads from Gravatar. 
-              Once you upload an avatar using the API, replace this <img> tag with:
-              <CloudflareImage imageId="YOUR_UPLOADED_IMAGE_ID" variant="avatar" alt="Ichimaru Gin" class="w-full h-full rounded-full object-cover border-4 border-black group-hover:scale-105 transition-transform duration-500 shadow-2xl shadow-brand-primary/50" />
-            */
+              cfAvatarId ? (
+                <CloudflareImage
+                  imageId={cfAvatarId}
+                  variant="public"
+                  alt="Ichimaru Gin"
+                  class="w-full h-full rounded-full object-cover border-4 border-black group-hover:scale-105 transition-transform duration-500 shadow-2xl shadow-brand-primary/50"
+                />
+              ) : (
+                <img
+                  src={`https://secure.gravatar.com/avatar/${gravatarHash}?s=512&d=https%3A%2F%2Fgithub.com%2FIchimaruGin728.png`}
+                  alt="Ichimaru Gin"
+                  class="w-full h-full rounded-full object-cover border-4 border-black group-hover:scale-105 transition-transform duration-500 shadow-2xl shadow-brand-primary/50"
+                />
+              )
             }
-            <img
-              src={`https://secure.gravatar.com/avatar/${gravatarHash}?s=512&d=https%3A%2F%2Fgithub.com%2FIchimaruGin728.png`}
-              alt="Ichimaru Gin"
-              class="w-full h-full rounded-full object-cover border-4 border-black group-hover:scale-105 transition-transform duration-500 shadow-2xl shadow-brand-primary/50"
-            />
           </div>
           <div
             class="absolute bottom-1 right-1 w-6 h-6 bg-green-500 rounded-full border-4 border-black animate-pulse"
