feat(about): restore interactive avatar swap without scaling effect

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,7 @@ import CloudflareImage from "../components/CloudflareImage.astro";
 
 const gravatarHash = "60eb98ab51a815a519feeca028e08573"; // IchimaruGin728
 const cfAvatarId = import.meta.env.PUBLIC_CF_AVATAR_ID;
+const cfCheemsId = "29d8d5a1-1d20-47db-9eaf-6347606fee00";
 
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
 
@@ -112,12 +113,20 @@ try {
             />
             {
               cfAvatarId ? (
-                <CloudflareImage
-                  imageId={cfAvatarId}
-                  variant="avatar"
-                  alt="Ichimaru Gin"
-                  class="w-full h-full rounded-full object-cover shadow-2xl shadow-brand-primary/50"
-                />
+                <div class="relative w-full h-full group/avatar">
+                  <CloudflareImage
+                    imageId={cfAvatarId}
+                    variant="avatar"
+                    alt="Ichimaru Gin"
+                    class="w-full h-full rounded-full object-cover transition-all duration-700 absolute top-0 left-0 z-10 group-hover/avatar:opacity-0"
+                  />
+                  <CloudflareImage
+                    imageId={cfCheemsId}
+                    variant="avatar"
+                    alt="Cheems mode"
+                    class="w-full h-full rounded-full object-cover opacity-0 group-hover/avatar:opacity-100 transition-all duration-700 absolute top-0 left-0"
+                  />
+                </div>
               ) : (
                 <img
                   src={`https://secure.gravatar.com/avatar/${gravatarHash}?s=512&d=https%3A%2F%2Fgithub.com%2FIchimaruGin728.png`}
