--- a/src/pages/zh/about.astro
+++ b/src/pages/zh/about.astro
@@ -5,7 +5,8 @@ import SocialLinks from "../../components/SocialLinks.tsx";
 import CloudflareImage from "../../components/CloudflareImage.astro";
 import { getLangFromUrl, useTranslations } from "../../i18n/utils";
 
-const cfAvatarId = import.meta.env.PUBLIC_CF_AVATAR_ID;
+const cfAvatarId =
+  import.meta.env.PUBLIC_CF_AVATAR_ID || "d0a6d84a-f3b2-4be8-1c43-f17ea5abc000";
 
 const lang = getLangFromUrl(Astro.url);
 // biome-ignore lint/correctness/noUnusedVariables: Used in template
