--- a/src/components/CloudflareImage.astro
+++ b/src/components/CloudflareImage.astro
@@ -26,8 +26,7 @@ const accountHash =
   import.meta.env.CLOUDFLARE_ACCOUNT_HASH ||
   Astro.locals.runtime?.env?.CLOUDFLARE_ACCOUNT_HASH ||
   process.env.CLOUDFLARE_ACCOUNT_HASH ||
-  "M82pPQiNYSyK_UjCktOIJA";
-// Fallback to Ichimaru's known hash if all else fails
+  "MISSING_HASH";
 
 // Construct the imagedelivery.net URL
 // Format: https://imagedelivery.net/<ACCOUNT_HASH>/<IMAGE_ID>/<VARIANT>
